tests/errors/cannot_call_method_on_non-struct.b
fn main() {
    int x = 5;
    x.foo();
}
